--- a/src/main/resources/fxml/admin/ClientCell.fxml
+++ b/src/main/resources/fxml/admin/ClientCell.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 
 
-<AnchorPane prefHeight="50.0" prefWidth="750.0" styleClass="client_cell_container" stylesheets="@../../styles/clientcell.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.jmc.mazebank.controllers.admin.ClientCellController">
+<AnchorPane prefHeight="50.0" prefWidth="750.0" styleClass="client_cell_container" stylesheets="@../../styles/clientcell.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
     <FontAwesomeIconView glyphName="USER" size="20" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
     <HBox prefHeight="40.0" prefWidth="550.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="5.0">
         <Label fx:id="first_name_label" text="Benjamin" />
