--- a/src/main/resources/fxml/client/TransactionCell.fxml
+++ b/src/main/resources/fxml/client/TransactionCell.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Line?>
 
 
-<AnchorPane prefHeight="60.0" prefWidth="550.0" styleClass="cell_container" stylesheets="@../../styles/transactioncell.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.jmc.mazebank.controllers.client.TransactionCellController">
+<AnchorPane prefHeight="60.0" prefWidth="550.0" styleClass="cell_container" stylesheets="@../../styles/transactioncell.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
     <VBox prefHeight="50.0" prefWidth="50.0" styleClass="transaction_icon_container" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="5.0">
         <FontAwesomeIconView fx:id="in_icon" glyphName="LONG_ARROW_RIGHT" size="18" />
         <FontAwesomeIconView fx:id="out_icon" glyphName="LONG_ARROW_LEFT" size="18" />
