--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
@@ -20,7 +21,7 @@
         <Label fx:id="payee_address_label" text="Payee Address" />
         <TextField fx:id="payee_address_field" styleClass="input_field" />
         <Label text="Password" />
-        <TextField fx:id="password_field" styleClass="input_field" />
+        <PasswordField fx:id="password_field" styleClass="input_field" />
         <Button fx:id="login_button" mnemonicParsing="false" text="Login" />
         <Label fx:id="error_label" styleClass="error_label" />
     </VBox>
