--- a/src/main/resources/fxml/client/Accounts.fxml
+++ b/src/main/resources/fxml/client/Accounts.fxml
@@ -8,42 +8,34 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="accounts_view_container" stylesheets="@../../styles/accounts.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.jmc.mazebank.controllers.client.AccountsController">
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account 1" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
     <VBox prefHeight="300.0" prefWidth="450.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="40.0">
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number" />
-        <Label fx:id="savings_account_first_number" text="3452 4950" />
+        <Label fx:id="savings_account_number" text="3452 4950" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction Limit" />
-        <Label fx:id="savings_account_first_transaction_limit" text="10" />
+        <Label fx:id="savings_account_transaction_limit" text="10" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created" />
-        <Label fx:id="savings_account_first_date_created" text="20-11-2022" />
+        <Label fx:id="savings_account_date_created" text="20-11-2022" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance" />
-        <Label fx:id="savings_account_first_balance" text="Rs. 4,00,000" />
+        <Label fx:id="savings_account_balance" text="Rs. 4,00,000" />
     </VBox>
-    <Text layoutX="14.0" layoutY="412.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account 2" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="364.0" />
+    <Text layoutX="14.0" layoutY="412.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pension Account" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="364.0" />
     <VBox layoutX="14.0" layoutY="386.0" prefHeight="300.0" prefWidth="450.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="14.0">
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Account Number" />
-        <Label fx:id="savings_account_second_number" text="3452 4950" />
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction Limit" />
-        <Label fx:id="savings_account_second_transaction_limit" text="10" />
+        <Label fx:id="pension_account_number" text="3452 4950" />
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Withdrawal Limit" />
+        <Label fx:id="pension_account_withdrawal_limit" text="Rs. 1,000" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Created" />
-        <Label fx:id="savings_account_second_date_created" text="20-11-2022" />
+        <Label fx:id="pension_account_date_created" text="20-11-2022" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Balance" />
-        <Label fx:id="savings_account_second_balance" text="Rs. 4,00,000" />
+        <Label fx:id="pension_account_balance" text="Rs. 4,00,000" />
     </VBox>
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Savings Account 2" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="38.0" />
-    <TextField fx:id="amount_to_savings_account_second" prefHeight="25.0" prefWidth="229.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="72.0" />
-    <Button fx:id="transfer_to_savings_account_second" layoutX="545.0" layoutY="116.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="229.0" text="Transfer" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="123.0">
+    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Pension Account" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="38.0" />
+    <TextField fx:id="amount_to_pension_account" prefHeight="25.0" prefWidth="229.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="72.0" />
+    <Button fx:id="transfer_to_pension_account" layoutX="545.0" layoutY="116.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="229.0" text="Transfer" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="123.0">
         <graphic>
             <FontAwesomeIconView fill="WHITE" glyphName="ARROW_DOWN" size="20" />
-        </graphic>
-    </Button>
-    <Text layoutX="466.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Funds To Savings Account 1" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="364.0" />
-    <TextField fx:id="amount_to_savings_account_first" layoutX="466.0" layoutY="82.0" prefHeight="25.0" prefWidth="229.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="398.0" />
-    <Button fx:id="transfer_to_savings_account_first" layoutX="456.0" layoutY="162.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="229.0" text="Transfer" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="449.0">
-        <graphic>
-            <FontAwesomeIconView fill="WHITE" glyphName="ARROW_UP" size="20" />
         </graphic>
     </Button>
 </AnchorPane>
